--- a/pokeapi_scraper.ipynb
+++ b/pokeapi_scraper.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -22,7 +22,7 @@
        "'query rawPokemonData {\\n  pokemon_v2_pokemon(order_by: { id: asc }) {\\n    id\\n    name\\n    height\\n    '"
       ]
      },
-     "execution_count": 17,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -39,22 +39,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Since query returns a lot of data and is technically intensive (it takes 30s to run on the backend server and returns 16MB of data), the data will be cached locally for use in the embeddings generation."
+    "Since query returns a lot of data and is technically intensive (it takes 30s to run on the backend server and returns 16MB of data), the data will be cached locally for use in the embeddings generation.\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "api_url = \"https://beta.pokeapi.co/graphql/v1beta\"\n",
     "\n",
-    "params = {\n",
-    "    \"query\": query,\n",
-    "    \"variables\": None,\n",
-    "    \"operationName\":\"rawPokemonData\"\n",
-    "}\n",
+    "params = {\"query\": query, \"variables\": None, \"operationName\": \"rawPokemonData\"}\n",
     "\n",
     "r = requests.post(api_url, json=params)\n",
     "data = r.json()[\"data\"][\"pokemon_v2_pokemon\"]"
@@ -62,16 +58,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1154"
+       "1302"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -82,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -107,7 +103,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.12"
+   "version": "3.12.3"
   },
   "orig_nbformat": 4,
   "vscode": {
