--- a/pokemon_lookup.ipynb
+++ b/pokemon_lookup.ipynb
@@ -57,25 +57,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
-    "poke_dict = {x[\"id\"]: x[\"name\"] for x in pokemon}"
+    "poke_dict = {x[\"id\"]: x[\"name\"].title() for x in pokemon}"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "'pikachu'"
+       "'Pikachu'"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
