--- a/pokemon_cosine_similarity_all.ipynb
+++ b/pokemon_cosine_similarity_all.ipynb
@@ -2,9 +2,18 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/maxwoolf/.venv/lib/python3.12/site-packages/tqdm/auto.py:21: TqdmWarning: IProgress not found. Please update jupyter and ipywidgets. See https://ipywidgets.readthedocs.io/en/stable/user_install.html\n",
+      "  from .autonotebook import tqdm as notebook_tqdm\n"
+     ]
+    }
+   ],
    "source": [
     "import numpy as np\n",
     "import datasets\n",
@@ -14,19 +23,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "Dataset({\n",
-       "    features: ['id', 'text_embedding', 'image_embedding', '2d_x', '2d_y'],\n",
+       "    features: ['id', 'text_embedding', 'image_embedding', 'umap_2d_x', 'umap_2d_y'],\n",
        "    num_rows: 1302\n",
        "})"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -36,7 +45,9 @@
     "\n",
     "# embeddings must be numpy arrays\n",
     "dataset.set_format(\n",
-    "    type=\"numpy\", columns=[\"text_embedding\", \"image_embedding\"], output_all_columns=True\n",
+    "    type=\"numpy\",\n",
+    "    columns=[\"text_embedding\", \"image_embedding\", \"umap_2d_x\", \"umap_2d_y\"],\n",
+    "    output_all_columns=True,\n",
     ")\n",
     "dataset"
    ]
@@ -51,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -60,7 +71,7 @@
        "0.94904304"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -72,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -81,7 +92,7 @@
        "0.9758484"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -92,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -101,7 +112,7 @@
        "(1302, 768)"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,13 +120,36 @@
    "source": [
     "text_embeddings = dataset[\"text_embedding\"]\n",
     "image_embeddings = dataset[\"image_embedding\"]\n",
+    "umap_projs = np.hstack(\n",
+    "    (np.expand_dims(dataset[\"umap_2d_x\"], 1), np.expand_dims(dataset[\"umap_2d_y\"], 1))\n",
+    ")\n",
     "poke_ids = dataset[\"id\"]\n",
     "text_embeddings.shape"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(1302, 2)"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "umap_projs.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -128,18 +162,23 @@
        "       0.87, 0.88, 0.84, 0.88, 0.86, 0.89], dtype=float32)"
       ]
      },
-     "execution_count": 23,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "def cosine_similarities(embed, target):\n",
-    "    assert target in [\"text\", \"image\"]\n",
+    "    assert target in [\"text\", \"image\", \"umap\"]\n",
     "    if target == \"text\":\n",
     "        embeddings = text_embeddings\n",
     "    elif target == \"image\":\n",
     "        embeddings = image_embeddings\n",
+    "    elif target == \"umap\":\n",
+    "        # https://stackoverflow.com/a/47775357\n",
+    "        embeddings = umap_projs\n",
+    "        a_min_b = embed - embeddings\n",
+    "        return np.sqrt(np.einsum(\"ij,ij->i\", a_min_b, a_min_b))\n",
     "\n",
     "    return embed @ embeddings.T\n",
     "\n",
@@ -151,23 +190,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1302/1302 [00:01<00:00, 679.24it/s]\n"
+      "100%|██████████| 1302/1302 [00:02<00:00, 511.09it/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "3390408"
+       "5085612"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -177,8 +216,8 @@
     "\n",
     "for poke in tqdm(dataset):\n",
     "    # text cossims\n",
-    "    text_cossims = cosine_similarities(poke[\"text_embedding\"], \"text\")\n",
-    "    for i, cossim in enumerate(text_cossims):\n",
+    "    all_cossims = cosine_similarities(poke[\"text_embedding\"], \"text\")\n",
+    "    for i, cossim in enumerate(all_cossims):\n",
     "        cossims.append(\n",
     "            {\n",
     "                \"id_1\": poke[\"id\"],\n",
@@ -189,8 +228,8 @@
     "        )\n",
     "\n",
     "    # image cossims\n",
-    "    image_cossims = cosine_similarities(poke[\"image_embedding\"], \"image\")\n",
-    "    for i, cossim in enumerate(image_cossims):\n",
+    "    all_cossims = cosine_similarities(poke[\"image_embedding\"], \"image\")\n",
+    "    for i, cossim in enumerate(all_cossims):\n",
     "        cossims.append(\n",
     "            {\n",
     "                \"id_1\": poke[\"id\"],\n",
@@ -200,12 +239,27 @@
     "            }\n",
     "        )\n",
     "\n",
+    "    # UMAP 2D Euclidian Distance\n",
+    "    umap_proj = np.concatenate(\n",
+    "        (np.array([poke[\"umap_2d_x\"]]), np.array([poke[\"umap_2d_y\"]]))\n",
+    "    )\n",
+    "    all_cossims = cosine_similarities(umap_proj, \"umap\")\n",
+    "    for i, cossim in enumerate(all_cossims):\n",
+    "        cossims.append(\n",
+    "            {\n",
+    "                \"id_1\": poke[\"id\"],\n",
+    "                \"id_2\": poke_ids[i],\n",
+    "                \"cossim_type\": \"umap_2d\",\n",
+    "                \"cossim\": cossim,\n",
+    "            }\n",
+    "        )\n",
+    "\n",
     "len(cossims)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +271,7 @@
        " 'cossim': Value(dtype='float32', id=None)}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -237,7 +291,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -245,11 +299,11 @@
       "text/plain": [
        "Dataset({\n",
        "    features: ['id_1', 'id_2', 'cossim_type', 'cossim'],\n",
-       "    num_rows: 3390408\n",
+       "    num_rows: 5085612\n",
        "})"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -261,23 +315,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating parquet from Arrow format: 100%|██████████| 3391/3391 [00:01<00:00, 2039.18ba/s]\n"
+      "Creating parquet from Arrow format: 100%|██████████| 5086/5086 [00:02<00:00, 1913.89ba/s]\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "69503364"
+       "108493056"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
