--- a/pokemon_multimodal_embeddings.ipynb
+++ b/pokemon_multimodal_embeddings.ipynb
@@ -17,11 +17,11 @@
    "source": [
     "import os\n",
     "\n",
+    "import datasets\n",
     "import numpy as np\n",
+    "import torch\n",
     "import torch.nn.functional as F\n",
     "import umap\n",
-    "import datasets\n",
-    "import torch\n",
     "from datasets import load_dataset\n",
     "from PIL import Image\n",
     "from tqdm.auto import tqdm\n",
@@ -59,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -70,7 +70,7 @@
        "<PIL.PngImagePlugin.PngImageFile image mode=RGB size=224x224>"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -155,7 +155,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "100%|██████████| 1302/1302 [01:35<00:00, 13.57it/s]\n"
+      "100%|██████████| 1302/1302 [01:36<00:00, 13.55it/s]\n"
      ]
     }
    ],
@@ -229,6 +229,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Optimizing UMAP parameters more for better clustering: https://umap-learn.readthedocs.io/en/latest/parameters.html\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -242,7 +249,7 @@
     }
    ],
    "source": [
-    "reducer = umap.UMAP(n_components=2, n_epochs=5000)\n",
+    "reducer = umap.UMAP(n_components=2, n_neighbors=5, min_dist=0.0, n_epochs=5000)\n",
     "embeddings_2d = reducer.fit_transform(embeddings_concat)"
    ]
   },
@@ -264,14 +271,14 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "1302it [00:00, 2617921.29it/s]\n"
+      "1302it [00:00, 1503574.84it/s]\n"
      ]
     }
    ],
    "source": [
     "for i, poke in tqdm(enumerate(poke_dicts)):\n",
-    "    poke[\"2d_x\"] = embeddings_2d[i, 0]\n",
-    "    poke[\"2d_y\"] = embeddings_2d[i, 1]"
+    "    poke[\"umap_2d_x\"] = embeddings_2d[i, 0]\n",
+    "    poke[\"umap_2d_y\"] = embeddings_2d[i, 1]"
    ]
   },
   {
@@ -292,8 +299,8 @@
        "{'id': Value(dtype='int32', id=None),\n",
        " 'text_embedding': Sequence(feature=Value(dtype='float32', id=None), length=768, id=None),\n",
        " 'image_embedding': Sequence(feature=Value(dtype='float32', id=None), length=768, id=None),\n",
-       " '2d_x': Value(dtype='float32', id=None),\n",
-       " '2d_y': Value(dtype='float32', id=None)}"
+       " 'umap_2d_x': Value(dtype='float32', id=None),\n",
+       " 'umap_2d_y': Value(dtype='float32', id=None)}"
       ]
      },
      "execution_count": 10,
@@ -311,8 +318,8 @@
     "        \"image_embedding\": datasets.Sequence(\n",
     "            feature=datasets.Value(dtype=\"float32\"), length=768\n",
     "        ),\n",
-    "        \"2d_x\": datasets.Value(dtype=\"float32\"),\n",
-    "        \"2d_y\": datasets.Value(dtype=\"float32\"),\n",
+    "        \"umap_2d_x\": datasets.Value(dtype=\"float32\"),\n",
+    "        \"umap_2d_y\": datasets.Value(dtype=\"float32\"),\n",
     "    }\n",
     ")\n",
     "\n",
@@ -328,7 +335,7 @@
      "data": {
       "text/plain": [
        "Dataset({\n",
-       "    features: ['id', 'text_embedding', 'image_embedding', '2d_x', '2d_y'],\n",
+       "    features: ['id', 'text_embedding', 'image_embedding', 'umap_2d_x', 'umap_2d_y'],\n",
        "    num_rows: 1302\n",
        "})"
       ]
@@ -352,7 +359,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "Creating parquet from Arrow format: 100%|██████████| 2/2 [00:00<00:00,  6.15ba/s]\n"
+      "Creating parquet from Arrow format: 100%|██████████| 2/2 [00:00<00:00,  6.45ba/s]\n"
      ]
     },
     {
